8297640: Increase buffer size for buf (insert_features_names) in Abstract_VM_Version::insert_features_names

Backport-of: 2f83b5c487f112c175d081ca5882f5032518937a